<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/vivoxia_fragment_scroll">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ncv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/vivoxia_linear_layout_scrollable">

            <TextView
                android:id="@+id/tv_legs"
                style="@style/vivoxia_text_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_legs"/>

            <include android:id="@+id/det_calf"
                layout="@layout/double_text_input_layout"/>

            <include android:id="@+id/det_thigh"
                layout="@layout/double_text_input_layout"/>

            <TextView
                android:id="@+id/tv_arms"
                style="@style/vivoxia_text_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_arms"/>

            <include android:id="@+id/det_forearm"
                layout="@layout/double_text_input_layout"/>

            <include android:id="@+id/det_bicep"
                layout="@layout/double_text_input_layout"/>

            <TextView
                android:id="@+id/tv_core"
                style="@style/vivoxia_text_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_core"/>

            <include android:id="@+id/det_core"
                layout="@layout/double_text_input_layout"/>

            <TextView
                android:id="@+id/tv_torso"
                style="@style/vivoxia_text_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_torso"/>

            <include android:id="@+id/det_lower_torso"
                layout="@layout/double_text_input_layout"/>

            <include android:id="@+id/det_upper_torso"
                layout="@layout/double_text_input_layout"/>

            <TextView
                android:id="@+id/tv_other"
                style="@style/vivoxia_text_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_other"/>

            <include android:id="@+id/til_weight"
                layout="@layout/text_input_layout"/>

            <include android:id="@+id/til_body_fat"
                layout="@layout/text_input_layout"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/ib_auto_fill"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/icon_auto_fill"
        app:layout_constraintBottom_toTopOf="@id/ib_save"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/ac_auto_fill"/>

    <ImageButton
        android:id="@+id/ib_save"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:background="@drawable/icon_save"
        android:contentDescription="@string/ac_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>