<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/vivoxia_fragment_scroll">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ncv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/ac_scroll">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/vivoxia_linear_layout_scrollable"/>

    </androidx.core.widget.NestedScrollView>


    <ImageButton
        android:id="@+id/ib_duplicate"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/icon_duplicate"
        app:layout_constraintBottom_toTopOf="@id/ib_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/ac_duplicate"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/icon_delete"
        app:layout_constraintBottom_toTopOf="@id/ib_add"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/ac_delete"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/ib_start"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/icon_play_arrow"
        app:layout_constraintBottom_toTopOf="@id/ib_add"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/ac_start"/>

    <ImageButton
        android:id="@+id/ib_add"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/icon_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/ac_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>